--- a/Framework/Pay365/src/Pay365.Pay365.Web/Web.config
+++ b/Framework/Pay365/src/Pay365.Pay365.Web/Web.config
@@ -56,7 +56,7 @@
 
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Server=DESKTOP-FPJGDPJ\SQLEXPRESS; Database=Pay365; User ID=sa; Password=nnt;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=DESKTOP-7RQ6H6S; Database=Pay365; User ID=cuongbx; Password=1;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
     <add name="Abp.Redis.Cache" connectionString="localhost" />
   </connectionStrings>
   <system.web>
