--- a/Pay365/Pay365Wallet/Web.config
+++ b/Pay365/Pay365Wallet/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="DOMAIN" value="http://localhost:6886/"/>
-    <add key="DOMAIN_API" value="http://localhost:6886/"/>
+    <add key="DOMAIN" value="//localhost:6886/"/>
+    <add key="DOMAIN_API" value="//localhost:6886/"/>
     <add key="NEWS_PAGE_SIZE" value="10"/>
   </appSettings>
   <!--
