--- a/Pay365/Pay365Wallet/Web.config
+++ b/Pay365/Pay365Wallet/Web.config
@@ -12,6 +12,7 @@
     <add key="DOMAIN" value="//localhost:6886/"/>
     <add key="DOMAIN_API" value="//localhost:6886/"/>
     <add key="NEWS_PAGE_SIZE" value="10"/>
+    <!--<add key="WEBSITE_MAINTAIN" value="20170224-173030" />-->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
