--- a/Pay365/Pay365.Utils/Pay365.Utils.csproj
+++ b/Pay365/Pay365.Utils/Pay365.Utils.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Utility\CacheUtility.cs" />
     <Compile Include="Utility\Contants.cs" />
     <Compile Include="Utility\CookieUtility.cs" />
+    <Compile Include="Utility\DeviceUtility.cs" />
     <Compile Include="Utility\ExcelObject.cs" />
     <Compile Include="Utility\ExtendedHtmlUtility.cs" />
     <Compile Include="Utility\FileUtility.cs" />
